trying to fix overflow AGAIN

--- a/public/css/mainchat.css
+++ b/public/css/mainchat.css
@@ -125,7 +125,7 @@ html,body {
     font-family: 'Montserrat', sans-serif;
     color:aliceblue;
     max-width: inherit;
-    overflow-wrap: break-word;
+    word-wrap: break-word;
 }
 
 .chatMessagesArea {
